# AntsAIBot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  parallel_statistics.json  pyproject.toml  requirements_analysis.txt  reward_analysis.md  statistics.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/reference/xathis/: postmortem.txt
game_logs/: .gitkeep  0.replay  replay.0.html  replay.html
scripts/: analyze_results.py  benchmark.py  benchmark.sh  docker_test.sh  play_one_game.sh  play_one_game_live.sh  run_parallel_stats.sh  run_statistics.sh  run_statistics_json.sh  test_bot.sh  test_suite.sh
src/ants/: ants.py  engine.py
src/bots/: bot.py  xathis_bot.py
src/sample_bots/python/: RandomBot.py
src/tools/: playgame.py
src/tools/mapgen/: asymmetric_mapgen.py  map.py  mapgen.py  symmetric_mapgen.py
tests/: conftest.py  test_advanced_bot.py  test_analyze_results.py  test_benchmark_parser.py  test_bot_helpers.py  test_config.yaml  test_devcontainer.py  test_dockerfile.py  test_engine_parser.py  test_mapgen.py  test_playgame_entrypoint.py  test_playgame_result_line.py  test_readme_consistency.py  test_sample_bots.py  test_xathis_bot.py  test_xathis_explore.py  test_xathis_fight.py  test_xathis_hills_defence.py  test_xathis_init_food.py
visualizer/: visualize_locally.py
visualizer/js/: Application.js  Buttons.js  CanvasElement.js
