[project]
name = "antsaibot"
version = "0.1.0"
description = "Ants AI Challenge Python Bot and Engine"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]
analysis = [
    "pandas>=3.0.0",
    "numpy>=2.4.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "scipy>=1.17.0",
]
dev = [
    "antsaibot[test,analysis]",
]

[tool.uv]
# Add UV-specific configuration here if needed

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.*",
    "ignore:FigureCanvasAgg is non-interactive:UserWarning",
    "ignore:No artists with labels found to put in legend:UserWarning",
]
