[project]
name = "antsaibot"
version = "0.1.0"
description = "Ants AI Challenge Python Bot and Engine"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
analysis = [
    "pandas>=3.0.3",
    "numpy>=2.5.0",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "scipy>=1.18.0",
]
dev = [
    "antsaibot[test,analysis]",
]

[tool.uv]
# Add UV-specific configuration here if needed

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.*",
    "ignore:FigureCanvasAgg is non-interactive:UserWarning",
    "ignore:No artists with labels found to put in legend:UserWarning",
]
